# rag-knowledge-ops

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_READY_PROJECT_BRIEF.md  Makefile  README.md  doc.md  docker-compose.yml  full-brife.md  package.json  pnpm-lock.yaml
services/api/: alembic.ini  pyproject.toml
services/api/app/: main.py
services/api/app/ai/: chroma_client.py  embeddings.py  llm.py
services/api/app/api/: ai.py  auth.py  documents.py  health.py  ingest.py  insights.py  jobs.py  notifications.py  search.py
services/api/app/core/: cache.py  config.py  deps.py  errors.py  logging.py  middleware.py  publisher.py  rate_limit.py  security.py
services/api/app/db/: base.py  session.py
services/api/app/ingestion/: chunker.py  normalize.py  storage.py  types.py
services/api/app/insights/: coordinator.py  dedup.py  generator.py  nightly.py  repo.py  scoped.py  stale.py
services/api/app/models/: __init__.py  document.py  insight.py  user.py  workspace.py
services/api/app/notifications/: dispatcher.py
services/api/app/retrieval/: confidence.py  fusion.py  keyword.py  query_rewrite.py  rerank.py  types.py  vector.py
services/api/app/schemas/: ai.py  auth.py  documents.py  ingest.py  insights.py  jobs.py  notifications.py
services/api/app/scripts/: seed.py  wait_for_db.py
services/api/app/services/: citations.py  dedup.py  ingest.py  query_cache.py  reasoning.py  retrieval.py
services/api/app/tests/: conftest.py  test_ai_api.py  test_auth.py  test_cache.py  test_chunker.py  test_citations.py  test_confidence.py  test_dedup.py  test_extractors.py  test_fusion.py  test_health.py  test_ingest_api.py  test_ingest_service.py  test_insight_dedup.py  test_insights_api.py  test_insights_repo.py  test_insights_stale.py  test_jobs_api.py  (+6 more)
services/api/migrations/: env.py  script.py.mako
services/worker/: celerybeat-schedule  pyproject.toml
services/worker/worker/: celery_app.py  context.py
(+101 files in other folders)
